# astrorag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-research.txt  setup.cfg
.streamlit/: config.toml
astrorag/: __init__.py  config.py  logger.py  paths.py  validate.py
astrorag/chat/: __init__.py  formatter.py  library.py  models.py  qa.py  widget.py
astrorag/data/: __init__.py  cache.py  loader.py  models.py  streaming.py
astrorag/evaluation/: __init__.py  ablation.py  ablation_metrics.py  ablation_runner.py  metrics.py  models.py  queries.py  runner.py
astrorag/extraction/: __init__.py  equations.py  quality.py  routing.py  tables.py
astrorag/graph/: __init__.py  clustering.py  models.py  ppr.py  signals.py
astrorag/llm/: __init__.py  client.py  models.py
astrorag/pdf/: __init__.py  extractor.py  fetcher.py  models.py  sections.py
astrorag/retrieval/: __init__.py  bm25_index.py  models.py  tokenizer.py
astrorag/stages/: __init__.py  stage0_decompose.py  stage1_bm25.py  stage2_graph.py  stage3_rerank.py  stage4_pdf.py  stage5_summarise.py  stage6_library.py
astrorag_ui/: README.md  streamlit_app.py
astrorag_ui/.streamlit/: config.toml  secrets.toml.example
astrorag_ui/data/: context_library.json  eval_full.json
astrorag_ui/data/ablation/: ablation_bm25_only.json  ablation_no_graph.json  ablation_no_llm_rerank.json  ablation_no_pdf.json
astrorag_ui/pages/: 1_📊_Papers.py  2_💬_Chat.py  3_📈_Benchmark.py
data/: context_library.json
notebooks/: astrorag_chatbot.ipynb
results/: eval_smoke.json
results/ablation_smoke/: ablation_full.json  ablation_no_quality_gate.json
scripts/: benchmark_data_load.py  build_bm25_index.py  build_library_from_eval.py  report_ablation.py  report_evaluation.py  run_ablation.py  run_evaluation.py  run_stage0.py  run_stage1.py  run_stage2.py  run_stage3.py  run_stage4.py  run_stage5.py  validate_environment.py
tests/: __init__.py  test_step10_ablation.py  test_step12_chat.py  test_step1_foundation.py  test_step2_data_loader.py  test_step3_stage0.py  test_step4_stage1.py  test_step5_stage2.py  test_step6_stage3.py  test_step7_stage4.py  test_step8_stage5.py  test_step9_evaluation.py
