[metadata]
name = astrorag
description = Evidence-Aware Astrophysics Literature Retrieval

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.package_data]
astrorag = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv,venv